fix: skip pip install when requirements.txt is missing/empty

--- a/services/dialogue_router/Dockerfile
+++ b/services/dialogue_router/Dockerfile
@@ -12,10 +12,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 COPY . /app
 
-RUN if [ -f requirements.txt ]; then \
+# Only install when requirements.txt exists AND is non-empty
+RUN if [ -f requirements.txt ] && [ -s requirements.txt ]; then \
       pip install --no-cache-dir -r requirements.txt ; \
     else \
-      pip install --no-cache-dir ; \
+      echo "No requirements or empty requirements.txt; skipping pip install"; \
     fi
 
 COPY --link entrypoint.sh /entrypoint.sh
