--- a/services/voice_gateway/Dockerfile
+++ b/services/voice_gateway/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
-# ALSA tools (playback/capture), useful for Jabra tests
+# ALSA tools (playback/capture) for Jabra tests
 RUN apt-get update && apt-get install -y --no-install-recommends \
       alsa-utils \
       ca-certificates \
@@ -12,10 +12,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 COPY . /app
 
-RUN if [ -f requirements.txt ]; then \
+# Only install when requirements.txt exists AND is non-empty
+RUN if [ -f requirements.txt ] && [ -s requirements.txt ]; then \
       pip install --no-cache-dir -r requirements.txt ; \
     else \
-      pip install --no-cache-dir ; \
+      echo "No requirements or empty requirements.txt; skipping pip install"; \
     fi
 
 COPY --link entrypoint.sh /entrypoint.sh
