--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-ROBOT_HOSTNAME=rpi-robot
-ROBOT_TIMEZONE=America/Los_Angeles
-DASHBOARD_PORT=8081
-WEB_VIDEO_PORT=8080
-USB_CAM_DEVICE=/dev/video0
-ROBOCLAW_SERIAL=/dev/ttyACM0
-ROBOCLAW_BAUD=115200
-ROS_DOMAIN_ID=42
+# === Robot Core .env (defaults) ===
+ROBOT_HOSTNAME=RPi-Robot
+ROBOT_NETWORK=robot-net
+VIDEO_DASHBOARD_PORT=8081
+PIPER_PORT=10200
+WHISPER_PORT=10300
+MOSQUITTO_PORT=1883
