voice: fix wyoming-whisper (add --model tiny.en); persist data; docs & sanity script updates

--- a/docker/override.site.yml
+++ b/docker/override.site.yml
@@ -1,11 +1,10 @@
-# docker/override.site.yml
 # Nginx dashboard serving static site from robot-project/site; maps to VIDEO_DASHBOARD_PORT.
 services:
   video-dashboard:
     image: nginx:alpine
     container_name: video-dashboard
     restart: unless-stopped
-    networks: [ "${ROBOT_NETWORK}" ]
+    networks: [ "robot-net" ]
     ports:
       - "${VIDEO_DASHBOARD_PORT:-8081}:80"
     volumes:
